--- a/private/skins/biscuit/templates/components/_comment_input.twig
+++ b/private/skins/biscuit/templates/components/_comment_input.twig
@@ -1,9 +1,6 @@
 <div class="new-comment" id="comment_field">
-    <div class="text-title">
-        <span>New Comment</span>
-    </div>
     <textarea class="form-submit-wide" id="comment_contents" name="comment" maxlength="1000"
-              placeholder="Write your comment here..." rows="4"></textarea>
+              placeholder="Write your comment" rows="4"></textarea>
     <button type="submit" id="comment_button" name="post" class="button button-secondary">
         Post
     </button>
