--- a/private/skins/biscuit/templates/components/default/header.twig
+++ b/private/skins/biscuit/templates/components/default/header.twig
@@ -20,7 +20,8 @@
             </form>
             <div class="header-links">
                 {% if is_user_logged_in %}
-                    <a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>
+                    <!--<a class="menulink" href="/notices">{{ user_notice_data }} notifications</a>-->
+                    <a class="menulink" href="/user/{{ user_data.name }}">{{ user_data.name }}</a>
                     <div class="header-links-menu-container">
                         <div class="menuButton" data-menu-id="user-menu">
                             <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
