--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -2,6 +2,22 @@
 
 {% set title = "Home" %}
 
+{% if is_chaziz_sb %}
+    {% set site_name = '<span style="font-weight: 400;">square</span><span style="font-weight: 800;">bracket</span>' %}
+{% else %}
+    {% set site_name = website_branding.name %}
+{% endif %}
+
+{# hack to prevent twig from outputing the number 1 #}
+{% if is_user_logged_in %}
+    {% if data.totals.followers != 1 %}
+        {% set pluralSubscribers = "s" %}
+    {% endif %}
+    {% if data.totals.views != 1 %}
+        {% set pluralViews = "s" %}
+    {% endif %}
+{% endif %}
+
 {% block scripts %}
     {#
         this is only really needed in the default theme (and maybe a dark default theme in the future)
@@ -16,10 +32,11 @@
 
             for ( var i = 0; i < elms.length; i++ ) {
                 new Splide( elms[ i ], {
-                    perPage: 4,
+                    perPage: 6,
                     rewind: true,
                     pagination: false,
                     breakpoints: {
+                        1899 : { perPage: 4 },
                         1249 : { perPage: 3 },
                         899 : { perPage: 2 },
                     },
@@ -39,18 +56,21 @@
                     <div class="jumbotron-logged-in">
                         <img src="{{ profile_picture(user_data.name) }}" class="pfp" alt="{{ user_data.name }}">
                         <div class="jumbotron-logged-in-text">
-                            <h1>Welcome to {{ website_branding.name }}, {{ user_data.title }}</h1>
+                            <h1>Welcome to {{ site_name | raw }}, {{ user_data.title }}</h1>
                             <p>@{{ user_data.name }}</p>
+                            <p>{{ data.totals.followers ?? "no" }} follower{{ pluralSubscribers }}
+                                • {{ data.totals.views ?? "no" }} view{{ pluralViews }}</p>
                         </div>
                     </div>
                 {% else %}
                     <div class="jumbotron-logged-out">
-                        <h1>Welcome to {{ website_branding.name }}</h1>
+                        <h1>Welcome to {{ site_name | raw }}</h1>
                         {% if is_chaziz_sb %}
                             <p>Your content, your narration, your niche on the web.</p>
                         {% else %}
                             <p>Insert slogan.</p>
                         {% endif %}
+                        <a href="/register.php" class="button button-primary">Get started ›</a>
                     </div>
                 {% endif %}
             </div>
@@ -109,7 +129,7 @@
                                     {{ news.published | relative_time }}
                                 </div>
                                 <div class="journal-contents">
-                                    {{ news.contents|u.truncate(300, '...') }}
+                                    {{ news.contents|u.truncate(250, '...') }}
                                 </div>
                             </div>
                         {% endfor %}
