--- a/scss/biscuit/default/_buttons.scss
+++ b/scss/biscuit/default/_buttons.scss
@@ -7,6 +7,11 @@
   display: inline-block;
   cursor: pointer;
   transition: background-color 0.3s ease, border-color 0.3s ease, color 0.3s ease;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none;
+  }
 
   &.button-small {
     padding: $button-padding-small;
@@ -21,7 +26,7 @@
 
 @each $color, $value in $color-map {
   .button-#{$color} {
-    border: 1px solid darken($value, 7.5%);
+    border: 1px solid darken($value, 9%);
     background-color: $value;
     color: contrast-color($value, #000, #fff);
 
