--- a/scss/biscuit/default/_watch_page.scss
+++ b/scss/biscuit/default/_watch_page.scss
@@ -25,6 +25,7 @@
   padding: $context-box-padding;
   overflow: hidden;
   word-break: break-word;
+  border-radius: 4px;
 
   .watch-box-description {
     // duplicate of the content-text class
@@ -82,8 +83,8 @@
 
   h1 {
     margin: 0;
-    font-size: 25px;
-    font-weight: 550;
+    font-size: 1.6em;
+    font-weight: 500;
   }
 
 }
