--- a/private/skins/biscuit/templates/upload.twig
+++ b/private/skins/biscuit/templates/upload.twig
@@ -1,18 +1,16 @@
 {% extends "_layout.twig" %}
 
-{% set title = "Upload submission" %}
+{% set title = "Upload" %}
 
 	{% block content %}
         <div class="section">
             <div class="section-title">
                 <h1>Upload</h1>
             </div>
-            <div class="banner banner-danger">
-                <span class="notification-text">
-                    Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
-                    with the guidelines may result in a swift termination of your account(s).
-                </span>
-            </div>
+            <p>
+                Make sure you have read the <a href="/guidelines">guidelines</a> first. Failure to comply
+                with the guidelines will result in a swift termination of your account(s).
+            </p>
             <div class="content-box">
                 <form name="uploadForm" id="uploadForm" method="post" action="upload" enctype="multipart/form-data">
                     <div class="panel panel-default">
@@ -24,7 +22,7 @@
 
                             <div class="form-input">
                                 <label for="desc">Description (optional):</label>
-                                <textarea class="form-submit" name="desc" maxlength="2000"
+                                <textarea class="form-submit" name="desc" maxlength="65500"
                                           form="uploadForm"
                                           style="overflow:hidden;resize:vertical" rows="3"></textarea>
                             </div>
