optimize recommendations, update tags parsing on upload page

--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -115,7 +115,7 @@
             {% if data.news_recent %}
                 <div class="section">
                     <div class="section-title">
-                        <h1>Site news</h1>
+                        <h1>Site News</h1>
                     </div>
                     <div class="content-box">
                         {% for news in data.news_recent %}
