--- a/private/skins/biscuit/templates/watch.twig
+++ b/private/skins/biscuit/templates/watch.twig
@@ -95,7 +95,7 @@
                 <div class="watch-box-tags">
                     <div class="section">
                         <div class="section-title">
-                            <h2>Tags (wip!)</h2>
+                            <h2>Tags</h2>
                         </div>
                         {% for tag in submission.tags %}
                             {{ tag.name }}
