--- a/scss/biscuit/default/_watch_page.scss
+++ b/scss/biscuit/default/_watch_page.scss
@@ -27,7 +27,7 @@
   word-break: break-word;
   border-radius: 4px;
 
-  .watch-box-tags {
+  .watch-box-info {
     .section-title {
       h2 {
         font-size: 13px;
