--- a/private/skins/biscuit/templates/index.twig
+++ b/private/skins/biscuit/templates/index.twig
@@ -142,7 +142,7 @@
                 </div>
                 <div class="content-box">
                     {% for tag in data.tags_recent %}
-                        <a href="search.php?query={{ tag.name }}">{{ tag.name }}</a>{{ not loop.last ? ',' }}
+                        <a href="/search.php?query={{ tag.name }}">{{ tag.name }}</a>{{ not loop.last ? ',' }}
                     {% else %}
                         <p>No tags!</p>
                     {% endfor %}
