add username changing

--- a/private/skins/biscuit/templates/profile.twig
+++ b/private/skins/biscuit/templates/profile.twig
@@ -49,8 +49,6 @@
                             {{ data.displayname }}
                             {% if data.is_fedi %}
                                 <img class="profile-box-instance-icon" src="https://{{ data.instance }}/favicon.png">
-                            {% else %}
-                                <img class="profile-box-instance-icon" src="{{ website_branding.assets_location }}/logo.png">
                             {% endif %}
                         </div>
                         <div class="profile-box-displayname">
@@ -58,6 +56,12 @@
                             {% if not data.is_fedi %}
                             | Joined {{ data.joined | relative_time }} |
                             <span id="follower_count">{{ data.followers }}</span> followers
+                            {% endif %}
+                            {% if data.old_usernames %}
+                                <br>Old usernames:
+                                {% for old_username in data.old_usernames %}
+                                {{ old_username.old_name }}{{ not loop.last ? ',' }}
+                                {% endfor %}
                             {% endif %}
                         </div>
                     </div>
